Bugfix for resource chooser tag filters not reflecting active storage changes.

Tag dropdown boxes will now always correctly reflect active / inactive
resource storages.

BUG:439699