libs/resources/KisTagFilterResourceProxyModel.cpp
@@ -28,7 +28,7 @@ struct KisTagFilterResourceProxyModel::Private
     KisTagResourceModel *tagResourceModel {0}; // This is the source model if we are filtering by tag
 
     QScopedPointer<KisResourceSearchBoxFilter> filter;
-    bool filterInCurrentTag {false};
+    bool filteringWithinCurrentTag {false};
 
     QMap<QString, QVariant> metaDataMapFilter;
     KisTagSP currentTagFilter;
@@ -188,12 +188,13 @@ void KisTagFilterResourceProxyModel::updateTagFilter()
 {
     emit beforeFilterChanges();
     const bool ignoreTagFiltering =
-        !d->filterInCurrentTag && !d->filter->isEmpty();
+        !d->filteringWithinCurrentTag && !d->filter->isEmpty();
 
     QAbstractItemModel *desiredModel = 0;
 
     if (d->currentResourceFilter) {
         QVector<KisTagSP> filter;
+
         if (d->currentTagFilter &&
             !ignoreTagFiltering &&
             d->currentTagFilter->url() != KisAllTagsModel::urlAll() &&
@@ -206,12 +207,13 @@ void KisTagFilterResourceProxyModel::updateTagFilter()
             KIS_SAFE_ASSERT_RECOVER_NOOP(!d->currentTagFilter ||
                                          d->currentTagFilter->url() != KisAllTagsModel::urlAllUntagged());
         }
+
         d->tagResourceModel->setTagsFilter(filter);
         d->tagResourceModel->setResourcesFilter({d->currentResourceFilter});
         desiredModel = d->tagResourceModel;
+
     } else {
         d->tagResourceModel->setResourcesFilter(QVector<KoResourceSP>());
-
         if (ignoreTagFiltering ||
                 !d->currentTagFilter ||
                 d->currentTagFilter->url() == KisAllTagsModel::urlAll()) {
@@ -256,7 +258,7 @@ void KisTagFilterResourceProxyModel::setSearchText(const QString& searchText)
 
 void KisTagFilterResourceProxyModel::setFilterInCurrentTag(bool filterInCurrentTag)
 {
-    d->filterInCurrentTag = filterInCurrentTag;
+    d->filteringWithinCurrentTag = filterInCurrentTag;
     updateTagFilter();
 }
 
